jupyterpy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jupyterpy
  labels:
    app.kubernetes.io/name: jupyterpy 
spec:
  ports:
    - port: 8888 
      targetPort: 8888 
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: jupyterpy 

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jupyterpy 
  labels:
    app.kubernetes.io/name: jupyterpy 
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: jupyterpy 
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jupyterpy 
    spec:
      containers:
        - name: jupyterpy 
          image: jupyter/datascience-notebook
          args: ["start-notebook.sh","--ip='*'", "--no-browser","--ServerApp.token=''","--ServerApp.password=''"]
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8888 
              protocol: TCP
