ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyterpy 
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: jupyterpy-jupyterpy-traefik-forward-auth@kubernetescrd
spec:
  tls:
    - secretName: jupyterpy-bender-sway-org-tls
      hosts:
        - sl.jupyterpy.bender.sway.org 
  rules:
  - host: sl.jupyterpy.bender.sway.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jupyterpy 
            port:
              number: 8888
